# xs

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  archive_refactor_summary.md  init.txt  package_format_spec.md  readme.md  resource.h  xs.aps  xs.rc  xs.sln  xs.sln.DotSettings  xs.vcxproj  xs.vcxproj.filters
.claude/: settings.local.json
.github/workflows/: build.yaml  jekyll-gh-pages.yml  release.yaml  windows-build.yml
assets/modules/: xs.wren  xs_components.wren  xs_containers.wren  xs_ec.wren  xs_math.wren  xs_shapes.wren  xs_tools.wren
assets/shaders/: sprite.vert
code/: audio.cpp  audio.hpp  configuration.cpp  configuration.hpp  cooker.cpp  cooker.hpp  data.cpp  data.hpp  defines.hpp  device.cpp  device.h  device.hpp  exporter.cpp  exporter.hpp  fileio.cpp  fileio.hpp  fluent_glyph.hpp  imgui_impl.cpp  input.hpp  inspector.cpp  inspector.hpp  log.cpp  log.h  log.hpp  main.cpp  main.hpp  packager.cpp  packager.hpp  platform.hpp  profiler.cpp  profiler.hpp  render.cpp  render.hpp  render_internal.h  render_internal.hpp  resource_pipeline.cpp  resource_pipeline.hpp  resources.hpp  script.cpp  script.hpp  (+10 more)
code/apple/: account_apple.mm  device_apple.mm  fileio_apple.mm  render_apple.mm
code/include/: account.h  account_switch.h  audio.h  bind_lua.cpp  color.h  configuration.h  cooker.h  data.h  defines.h  device.h  device_apple.h  device_pc.h  editor.h  fileio.h  input.h  inspector.h  log.h  opengl.h  profiler.h  registry.h  render.h  render_internal.h  resource_pipeline.h  resources.h  script.h  script_lua.cpp  script_lua.h  tools.h  types.h  version.h  xs.h
code/opengl/: opengl.hpp  render_gl.cpp
code/sdl3/: audio_sdl.cpp  device_sdl.cpp  input_sdl.cpp  simple_audio_sdl.cpp
code/source/: account_switch.cpp  audio.cpp  bind.cpp  configuration.cpp  cooker.cpp  data.cpp  device.cpp  device_pc.cpp  device_swtich.cpp  editor.cpp  fileio.cpp  input_pc.cpp  input_switch.cpp  inspector.cpp  log.cpp  main.cpp  opengl.cpp  profiler.cpp  registry.cpp  render.cpp  render_gl.cpp  render_internal.h  resource_pipeline.cpp  resources.cpp  script.cpp  tools.cpp  xs.cpp
docs/: CLAUDE_INSTRUCTIONS.md  Gemfile  README.md  _config.yml  api-reference.md  assert.md  assets-modules-external-assert.wren.md  assets-modules-xs.wren.md  assets-modules-xs_containers.wren.md  assets-modules-xs_ec.wren.md  assets-modules-xs_math.wren.md  assets-modules-xs_shapes.wren.md  audio.md  data.md  device.md  ec-componenets.md  ec.md  file.md  gettin-started.md  getting-started.html  getting-started.md  index.html  index.md  input.md  math.md  optional.md  render.md  roadmap.md
docs/_includes/: head_custom.html
docs/api/: assert.html  assets-modules-xs_containers.html  assets-modules-xs_math.html  components.html  containers.html  ec.html  index.html  math.html  render.html  shapes.html  tools.html
docs/css/: style.css
docs/js/: main.js
games/: init.txt
games/RumbleTest/: game.wren
games/city/: main.wren
games/draw_test/: main.wren
games/examples/: city.wren  dots.wren  draw_test.wren  hello.wren  helloSprite.wren  hex.wren  pong.wren
games/grid/: game.wren  grid.wren
games/grid-cmd/: game.wren  grid.wren  system.json
games/hello/: game.wren  system.json
games/hex/: main.wren
games/jump-core/: Blast_2019.flac  background.wren  game.json  game.wren  globals.wren  main.wren  player.wren  portal.wren  ships.wren  steering.wren  sub_optimal.wren  system.json  tags.wren  ui.wren
games/lecture/: class_variables.wren  game_end.wren  game_mid.wren  game_start.wren  hello.wren  step0_hello.wren  step1_variable.wren  step2_variables.wren  step3_functions.wren  step4_class_variables.wren  step5_game_start.wren  step6_game_mid.wren  step7_game_end.wren  step8_game_classes.wren  variables.wren
games/lock-on/: background.wren  game.json  game.wren  globals.wren  player.wren  projectiles.wren  ships.wren  system.json  tags.wren  ui.wren  unit.wren  vfx.wren
games/micro-horizon/: aim.wren  arrow.wren  bullets.wren  components.wren  create.wren  damage.wren  enemy.wren  game.json  game.wren  monster.wren  player.wren  system.json  tags.wren  unit.wren
games/parallax-test/: game.wren
games/sce_module/: libc.prx  libfmod.prx  libfmodL.prx  libfmodstudio.prx  libfmodstudioL.prx
games/seedwave/: background.wren  boss.wren  bullets.wren  components.wren  create.wren  debug.wren  dna.wren  evolver.wren  game.json  game.wren  player.wren  system.json  tags.wren  ui.wren  unit.wren
games/squares/: main.wren  pong.wren
games/sub_optimal/: components.wren  globals.wren  ships.wren  sub_optimal.wren
nintendo/: pre_build.py  xs.aarch64.nmeta
properties/: xs.props  xs_debug.props  xs_develop.props  xs_inspector.props  xs_opengl.props  xs_pc.props  xs_release.props
python/: example_04.py
resources/shaders/: uniforms.glsl
samples/animation/: animation.xsanim  game.json  game.wren
samples/attributes/: game.wren  project.json  readme.md
samples/audio/: README.md  game.json  game.wren  project.json
samples/common/: background.wren
samples/gameplay/: README.md  bullet.wren  collision.wren  create.wren  enemy.wren  game.json  game.wren  health.wren  pickup.wren  player.wren  project.json  readme.md  shadow.wren  spawner.wren  tags.wren
samples/grid/: background.wren  game.json  game.wren
samples/hello/: game.json  game.wren  project.json
samples/json/: game.wren  project.json  test_data.json
samples/render/: game.wren  project.json
samples/shape/: background.wren  game.json  game.wren  project.json
samples/vector/: background.wren  game.wren  project.json
samples/vectors/: game.json  game.wren
tools/: .itch.toml  background.py  dependencies.py  docs.py  docs_html.py  images.py  logo.py  make_build.py  make_build_and_upload.py  make_build_and_upload_game.py  spriter.py  ui_test.py  version.py
tools/images_gen/: background.py  images.py  logo.py  logo_svg.py  logo_svg_animated.py  requirements.txt
tools/sprijt/: sprijt.py
tools/update_deps/: build_freetype.py  readme.md  (+3 more)
xs/: main.cpp
xs.xcodeproj/: project.pbxproj
(+162 files in other folders)
